--- a/totalhr.web/Views/Shared/_CalendarEventEdit.cshtml
+++ b/totalhr.web/Views/Shared/_CalendarEventEdit.cshtml
@@ -349,7 +349,8 @@
     <script type="text/javascript" src="/Scripts/Site/BeatPicker.min.js"></script>
 <script type="text/javascript" src="/Scripts/jquery-1.11.0.min.js"></script> 
 <script type="text/javascript" src="/Scripts/date.js"></script>
-    
+    <script type="text/javascript" src="/Scripts/Site/calendar.js" ></script>
+
 <div class="status-box" id="status"></div>
 
 <script type="text/javascript">
