--- a/totalhr.web/Views/Shared/_FormScripts.cshtml
+++ b/totalhr.web/Views/Shared/_FormScripts.cshtml
@@ -1,7 +1,2 @@
-﻿
-<script type="text/javascript" src="/Scripts/Site/calendar.js" ></script>
-<script src="/Scripts/jquery-1.8.2.js"></script>
-<script src="/Scripts/jquery-ui-1.8.24.js"></script>
-<script type="text/javascript" src="/Scripts/jquery.validate.js" ></script>
+﻿<script type="text/javascript" src="/Scripts/jquery.validate.js" ></script>
 <script type="text/javascript" src="/Scripts/jquery.validate.unobtrusive.js" ></script>
-<script type="text/javascript" src="/Scripts/Site/common.js" ></script>
